--- a/vignettes/standsurv.bib
+++ b/vignettes/standsurv.bib
@@ -1,5 +1,5 @@
 @article{therneau_1999,
-  title = {A package for survival analysis in S},
+  title = {A package for survival analysis in {S}},
   author = {Therneau, Terry M.},
   year = {1999},
   month = {February},
