--- a/vignettes/standsurv.bib
+++ b/vignettes/standsurv.bib
@@ -11,7 +11,7 @@
 	volume = {40},
 	issn = {1097-0258},
 	url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/sim.9171},
-	doi = {10.1002/sim.9171},
+	OPTdoi = {10.1002/sim.9171},
 	language = {en},
 	number = {27},
 	urldate = {2022-01-07},
@@ -40,7 +40,7 @@
 	author = {Ederer, F. and Axtell, L. M. and Cutler, S. J.},
 	month = sep,
 	year = {1961},
-	pmid = {13889176},
+	OPTpmid = {13889176},
 	keywords = {Biometry, Humans, Neomycin, NEOMYCIN/statistics, Survival Rate},
 	pages = {101--121},
 }
