Add warning about time-dependent covariates

--- a/vignettes/flexsurv.Rnw
+++ b/vignettes/flexsurv.Rnw
@@ -310,7 +310,7 @@ and upper bounds \code{tmin} and \code{tmax}, then we would write
 \code{Surv(tmin, tmax, type = "interval2")}.  
 \end{sloppypar}
 
-Time-dependent covariates can be represented in ``counting process''
+Time-dependent covariates can sometimes be represented in ``counting process''
 form --- as a series of left-truncated survival times, which may also be right-censored.
 For each
 individual there would be multiple records, each corresponding to an
@@ -318,6 +318,7 @@ interval where the covariate is assumed to be constant.  The response
 would be of the form \code{Surv(start, stop, censrec)}, where
 \code{start} and \code{stop} are the limits of each interval, and
 \code{censrec} indicates whether a death was observed at \code{stop}.
+Care is required however.  Whether this is a valid approach in \pkg{flexsurv}  depends on whether the probability of survival up to the left-truncation time can be represented by a term of the form $S_i(s_i) = exp(-H_i(s_i))$ in the likelihood (equation 2).  The cumulative hazard $H$ over the interval from time 0 to time $s_i$ depends on how the covariates change on this time interval.   If the covariates are constant between time 0 and time $s_i$, or if covariates are modelled with proportional hazards, then this cumulative hazard is $H_i(s_i)$, hence the likelihood used by \pkg{flexsurv} is valid.  It is not valid in general however for other forms of dependence on covariates, e.g. accelerated failure time models.
 
 In versions of \pkg{flexsurv} since April 2020, models with
 individual-specific right-truncation times are also supported.   
