Handle non-standard factor contrasts

--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,6 +1,6 @@
 -*- text -*-
 
-Version 2.3 (2023-??-??)
+Version 2.3 (2024-??-??)
 -------------------------
 
 * Analytic Hessian calculation for models where this is possible, that
@@ -12,6 +12,8 @@ Version 2.3 (2023-??-??)
 * Weighted likelihood for relative survival models now implemented
   consistently with other models, as a weighted sum of individual
   log-likelihoods.
+
+* Non-default factor contrasts now handled.
 
 * `pmatrix.simfs` can now accept a vector of times `t` and has a
   `tidy` output option.
