--- a/inst/NEWS
+++ b/inst/NEWS
@@ -13,6 +13,11 @@ Version 2.3 (2024-??-??)
   consistently with other models, as a weighted sum of individual
   log-likelihoods.
 
+* `standsurv` now returns results in the same order of times `t`
+  as given by the user, for consistency with `summary.flexsurvreg`.
+
+* Quantiles of standardised survival now available in `standsurv`.
+
 * Non-default factor contrasts now handled.
 
 * `pmatrix.simfs` can now accept a vector of times `t` and has a
@@ -26,8 +31,6 @@ Version 2.3 (2024-??-??)
 * Default value for t now chosen in `hr_flexsurvreg`.
 
 * `coxsnell.flexsurvreg` now handles delayed entry.
-
-* Quantiles of standardised survival now available in `standsurv`.
 
 
 Version 2.2.2 (2023-01-31)
